# data-analytics-agent

./: .env.example  .gitignore  README.md  command.md  docker-compose.yml  pyproject.toml  requirements.txt  tools.yaml
.github/: CODEOWNERS
agent/: AGENT.md  README.md  config.py  models.py
aidlc-docs/: aidlc-state.md  audit.md
app/: __init__.py  api.py  run.sh
eval/: README.md  __init__.py  harness.py  run_benchmark.py  run_dab_benchmark.py  run_trials.py  score_log.md  score_results.py  test_set.json
kb/: README.md
mcp/: tools.docker.yaml
planning/: ai_dlc_playbook.md  inception.md  mob_session_log.md  operations.md  phase_gate_review_template.md  postmortem_template.md  release_readiness_checklist.md  team-cohere-branching-and-ownership.md  team_operating_system_roadmap.md
probes/: README.md  probe_runner.py  probes.md
results/: README.md  dab_benchmark_5trials.json  dab_detailed.json  dab_results.json  dab_submission.json  harness_score_log.json  live_smoke.json  pr_link.md  smoke.json  smoke_gpt4o.json  smoke_gpt4o_hardened.json  smoke_gpt4o_hardened_v2.json  smoke_stockmarket_orchestrated_t1.json  smoke_stockmarket_orchestrated_t2.json  team-cohere_gemini-2.0-flash-001_n5.json
sandbox/: README.md  local_db_server.py  sandbox_server.py
scripts/: bootstrap_ec2_stack.sh  build_dab_submission.py  create_dab_views.py  healthcheck_stack.sh  load_dab_datasets.py  load_postgres_mongo.py  load_remaining.py
signal/: README.md  community_participation.md  community_participation_log.md  demo_checklist.md  engagement_log.md  external_engagement_summary.md  (+1 more)
(+258 files in other folders)
